// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test with <GifGried /> component should match the <GifGried /> component with the snapshot 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Boku No Hero
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Test with <GifGried /> component should show items when the images are loaded (useFetchGifs) 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Boku No Hero
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="A title"
      url="https://localhost/image.jpg"
    />
  </div>
</Fragment>
`;
